--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="assets/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <div class="container">
@@ -37,9 +38,41 @@
         </div> 
     </div>
     <div class="container">
+        <div class="card_theme my-5 p-5">
+        <h1 class="gra_head">Smart Layout</h1>
+        <h3 class="my-5 gra_head">Timeline</h3>
+        <div class="row time_row">
+            <div class="col-lg-4">
+                <div class="time_div text-center">
+                    <div class="d-flex justify-content-center">
+                        <h3 class="numbers">1</h3>
+                    </div>
+                    <h4>First Title</h4>
+                    <p class="card_para">This is the first point of timeline</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="time_div text-center">
+                    <div class="d-flex justify-content-center">
+                        <h3 class="numbers">2</h3>
+                    </div>
+                    <h4>Second Title</h4>
+                    <p class="card_para">You can easily add and remove points and we'll auto resize your content</p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="time_div text-center">
+                    <div class="d-flex justify-content-center">
+                        <h3 class="numbers">3</h3>
+                    </div>
+                    <h4>Third Title</h4>
+                    <p class="card_para">That's why it is called smart layout</p>
+                </div>
+            </div>
+        </div>
 
         <div class="fdiv py-5">
-            <h3>Pyramid</h3>
+            <h3 class="gra_head">Pyramid</h3>
                 <div class="pyramid">
                     <div class="top">1</div>
                     <div class="mid">2</div>
@@ -47,9 +80,56 @@
                 </div>
             
         </div>
-        
+    </div>
+    </div>
+
+    <div class="container">
+        <div class="card_theme p-5 my-5">
+            <h1 class="gra_head">Fonts</h1>
+            <p class="card_para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel iusto adipisci ea corrupti iure ad ex vero ratione culpa voluptatum. Reprehenderit tenetur eum, expedita repellendus officiis culpa odit velit possimus.</p>
+           <div class="row">
+            <div class="col-lg-6">
+                <h1 class="gra_head">Heading 1</h1>
+                <h2 class="gra_head">Heading 2</h2>
+                <h3 class="gra_head">Heading 3</h3>
+                <h4 class="gra_head">Heading 4</h4>
+            </div>
+            <div class="col-lg-6">
+                <p class="large">Large body text</p>
+                <p>Normall body text</p>
+                <small>Large body text</small>
+
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="card_theme p-5 my-5">
+            <h1 class="gra_head">Primary Accent Color</h1>
+            <ul class="my-3">
+                <li class="card_para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, quibusdam esse voluptatum officia autem doloremque ex mollit</li>
+                <li class="card_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
+            </ul>
+            <div class="callout p-4">
+                        <p class="fw-bold">Attention All</p>
+                        <p class="card_para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, libero aperiam temporibus nemo unde aliquid veniam des</p>
+            </div>
+
+            <div class="row my-5">
+                <div class="col-lg-4">
+                    <button class="pri_but my-2">Primary Button</button><br>
+                    <button class="sec_but my-2">Secondary Button</button>
+                </div>
+                <div class="col-lg-8 bordiv ps-4">
+                    <p class="card_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et rerum fuga illo, at expedita tempore eos vero soluta voluptatum laudantium quo cumque enim aliqua</p>
+                    <p>-Author</p>
+                </div>
+            </div>
+
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
-</html>
+</html> 
